# Final-Project-MSML-605

./: .gitignore  Dockerfile  README.md  justfile  pyproject.toml  run.sh
.zed/: debug.json
configs/: config.json  data-improve.json  environment.json  final-config.json
fixed-runs/: run_1f69fdcd-dc01-4ef6-b504-4d17bafc91c0.json  run_34355db8-e23a-4d08-8379-6581c2001aa7.json  run_8a516a20-3b0e-4ffd-b37a-36b373bfe535.json  run_df035d4b-5818-4579-9bce-15cb879de875.json  run_e0a93373-8c7d-4ad1-8474-225e19990e4a.json  run_e20f0042-6a07-48f0-b194-18231079266f.json  run_ec88873b-7ac2-4334-8ab1-0e37abed68bc.json  run_f565dfef-4b9a-49ea-b2e9-b3932affb7e7.json
reports/: profiling.md  report.md  reproducibility_checklist.md  system_card.md
scripts/: benchmark.py  build-image.sh  container-entrypoint.sh  create_run.py  do_run.py  error_analysis.py  evaluate.py  generate_embeddings.py  ingest_lfw.py  load_test.py  make_pairs.py  preprocess.py  run-container.sh  score_pairs.py  thresholds.py  verify_pair.py
src/: bench_similarity.py  ingest_lfw.py  make_pairs.py
src/msml605/: confidence.py  config.py  inference.py  load_data.py  manifest.py  metrics.py  pairs.py  run.py  scoring.py  scripts.py  similarity.py  tracking.py
src/msml605/scripts/: ingest_lfw.py
tests/: config.json  test_confidence.py  test_inference_integration.py  test_integration.py  test_metrics.py  test_similarity.py
tests/test_data/: lfw_allnames.csv
