[project]
name = "msml605"
version = "0.1.0"
description = "The final project for MSML 605."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kagglehub[pandas-datasets]>=1.0.0",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
]


[project.scripts]
make-pairs = "msml605.scripts.make_pairs:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
