[project]
name = "msml605"
version = "0.1.0"
description = "The final project for MSML 605."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arcface>=0.0.8",
    "kagglehub[pandas-datasets]>=1.0.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
]
python-preference = "only-managed"
cache-dir = ".uv_cache"

[tool.uv]
link-mode = "copy"

[build-system]
requires = ["uv_build>=0.10.7,<=0.11"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
